--- a/src/components/css/Footer.css
+++ b/src/components/css/Footer.css
@@ -1,6 +1,6 @@
 .Footer {
   width:100%;
-  min-height:500px;
+  /* min-height:500px; */
   background:white;
 }
 
@@ -10,6 +10,8 @@
 
 .Top, .Bottom {
   text-align: center;
+}
+.Bottom {
   margin: 30px 0;
 }
 
@@ -18,6 +20,9 @@
   margin:auto;
   /* display:flex; */
   padding-top:20px;
+}
+.Container:first-child {
+  padding-top: 0;
 }
 
 .SecondContainer {
